招生网站站内信修改
Signed-off-by: 琚峰 <jufeng@tranzvision.com.cn>

--- a/src/main/resources/html/TZWebStationLetterMgBundle/TZ_WEB_ZNX_MG_CONTENT.html
+++ b/src/main/resources/html/TZWebStationLetterMgBundle/TZ_WEB_ZNX_MG_CONTENT.html
@@ -1,10 +1,10 @@
- <div class="main_tit">%bind(:1)</div>
+ <div class="main_tit">%bind(:2)</div>
               <div class="zxj_main_body">
                  <div class="table_top">
-                 	<p class="zxj_messages">%bind(:2)<span class="message_cur">%bind(:3)</span>%bind(:4)</p>
+                 	<p class="zxj_messages">%bind(:3)<span class="message_cur">%bind(:4)</span>%bind(:5)</p>
                  	<a class="detele_icon">
-                 		<img src="statics/images/website/skins/23/message_de.png">
-                 		<span>%bind(:5)</span>
+                 		<img src="%bind(:1)/statics/images/website/skins/23/message_de.png">
+                 		<span>%bind(:6)</span>
                  	</a>
                  	<div class="table_search">
                  		<input type="text" class="search_input">
@@ -17,13 +17,13 @@
 					   <tr onclick="checkAll(this);" class="erow">
 					   	<td><div class="check-box"> <i class="ico-check" id="checkAll"></i></div></div>
 					   	</td>
-						<td>%bind(:6)</td>
 						<td>%bind(:7)</td>
 						<td>%bind(:8)</td>
+						<td>%bind(:9)</td>
 					   </tr>
 					</thead>
 					<tbody>
-						%bind(:9)
+						%bind(:10)
 					</tbody>
 	            </table>
 	            <div class="main_article_nav" >
