招生网站站内信修改
Signed-off-by: 琚峰 <jufeng@tranzvision.com.cn>

--- a/src/main/resources/html/TZWebStationLetterMgBundle/TZ_WEB_ZNX_MG_HTML.html
+++ b/src/main/resources/html/TZWebStationLetterMgBundle/TZ_WEB_ZNX_MG_HTML.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge" >
-<title>清华MBA-站内信</title>
+<title></title>
 <link href="%bind(:3)" rel="stylesheet" type="text/css">
 <script type="text/javascript">
 	TzUniversityContextPath = "%bind(:1)";
