用户注册项配置以及登录、注册和个人信息维护

--- a/src/main/resources/html/TZWebSiteRegisteBundle/TZ_MENU_ZHGL_HTML2.html
+++ b/src/main/resources/html/TZWebSiteRegisteBundle/TZ_MENU_ZHGL_HTML2.html
@@ -21,6 +21,18 @@
 	src="%bind(:1)/statics/js/tranzvision/extjs/app/view/website/set/js/broad/pagefunc.js"></script>
 <script type="text/javascript"	src="%bind(:1)/statics/js/website/account/semInit.js"></script>
 <!-- <script type="text/javascript"	src="%bind(:1)/statics/js/website/broad/index/initp.js"></script> -->
+<style>
+	.combox{
+		margin-right:0px !important;
+		width:258px !important;
+	}
+	.main_inner_right{
+		width:640px;
+	}
+	。semUserTip{
+		font-size:14px;
+	}
+</style>
 </head>
 <body style="background: #eee">
 	<div id="headarea" class="top assdiv" area-add="false" area-edit="true" area-del="false" area-copy="false" area-moveup="false" area-movedown="false" area-postion="H" area-type="YT" area-id=""></div>	
