招生系统网站站内信修改
Signed-off-by: 琚峰 <jufeng@tranzvision.com.cn>

--- a/src/main/resources/html/TZWebStationLetterMgBundle/TZ_WEB_ZNX_MG_HTML.html
+++ b/src/main/resources/html/TZWebStationLetterMgBundle/TZ_WEB_ZNX_MG_HTML.html
@@ -70,14 +70,13 @@
 	    			var con = confirm("确定删除所选内容？");
 	       			if(con == true){
 	              		$(this).hide();
-	              		
 	              		loadStationMails(1,0);
 	       			}
 	            } 
 	          });
         });
    		$(".search_icon").click(function(event){
-   			alert("搜索");
+   			$(".search_input").val();
    		});
    		
    		//初始加载站内信列表
