招生网站首页修改
Signed-off-by: 琚峰 <jufeng@tranzvision.com.cn>

--- a/src/main/resources/html/TZWebSiteAreaInfoBundle/TZ_SITE_AREA_HDTZ_HTML.html
+++ b/src/main/resources/html/TZWebSiteAreaInfoBundle/TZ_SITE_AREA_HDTZ_HTML.html
@@ -3,7 +3,7 @@
      <li class="tab_on" tab-col="%bind(:1)">%bind(:2)</li>
      %bind(:3)
    </div>
-   <a href="#" class="zxj_more">%bind(:4)</a>
+   <a href="javascript:void(0)" class="zxj_more">%bind(:4)</a>
    <div class="tabNote">
 	   	%bind(:5)
    </div>
