--- a/src/main/resources/html/TZWebSiteAreaInfoBundle/TZ_SITE_AREA_HDTZ_TAB_LI_HTML.html
+++ b/src/main/resources/html/TZWebSiteAreaInfoBundle/TZ_SITE_AREA_HDTZ_TAB_LI_HTML.html
@@ -1,5 +1,5 @@
 <li>
-	<a class="gra" href="%bind(:1)" target="_blank">
+	<a class="gra" href="%bind(:1)">
 		<div class="dotted"></div>
 		<p>%bind(:2)</p>
 		<i class="hot" style="display:%bind(:4)"></i><i class="new" style="display:%bind(:5)"></i>
