--- a/src/main/resources/html/TZWebSiteAreaInfoBundle/TZ_SITE_MORE_BKRL_LI_HTML.html
+++ b/src/main/resources/html/TZWebSiteAreaInfoBundle/TZ_SITE_MORE_BKRL_LI_HTML.html
@@ -1,32 +1,8 @@
-
-<div class="main_tit">报考日历</div>
+<div class="main_tit">%bind(:1)</div>
 <div class="tab1 block">
 	<div class="tab_list">
 		<ul id="countlist">
-			<li><div class="main_mid_recruit_list_title2">
-					<a target="_blank" href="#" class="gra">北大燕京学堂完成首期招生</a>
-				</div>
-				<div class="main_mid_recruit_list_date">2015-06-26 08:01</div></li>
-			<li><div class="main_mid_recruit_list_title2">
-					<a target="_blank" href="#" class="gra">北大燕京学堂完成首期招生</a>
-				</div>
-				<div class="main_mid_recruit_list_date">2015-06-26 08:01</div></li>
-			<li><div class="main_mid_recruit_list_title2">
-					<a target="_blank" href="#" class="gra">北大燕京学堂完成首期招生</a>
-				</div>
-				<div class="main_mid_recruit_list_date">2015-06-26 08:01</div></li>
-			<li><div class="main_mid_recruit_list_title2">
-					<a target="_blank" href="#" class="gra">北大燕京学堂完成首期招生</a>
-				</div>
-				<div class="main_mid_recruit_list_date">2015-06-26 08:01</div></li>
-			<li><div class="main_mid_recruit_list_title2">
-					<a target="_blank" href="#" class="gra">北大燕京学堂完成首期招生</a>
-				</div>
-				<div class="main_mid_recruit_list_date">2015-06-26 08:01</div></li>
-			<li><div class="main_mid_recruit_list_title2">
-					<a target="_blank" href="#" class="gra">北大燕京学堂完成首期招生</a>
-				</div>
-				<div class="main_mid_recruit_list_date">2015-06-26 08:01</div></li>
+			
 		</ul>
 		<script type="text/javascript">
 			$(document).ready(function() {
@@ -38,15 +14,11 @@
 		<div class="main_article_nav_left2">
 
 			<ul id="pagecount">
-				<li onClick="QueryColu(1)">&lt;&lt;</li>
-				<li onClick="QueryColu(1)">1</li>
-				<li class="now" onClick="QueryColu(1)">2</li>
-				<li onClick="QueryColu(1)">3</li>
-				<li onClick="QueryColu(1)">&gt;&gt;</li>
+				
 			</ul>
 		</div>
 		<div id="curentcoutpage" class="main_article_nav_right2">
-			第 <span id="nowpage">2</span>/3 页
+			
 		</div>
 
 	</div>
