--- a/src/main/resources/html/TZWebsiteApplicationBundle/TZ_ONLINE_PAGE_HTML.html
+++ b/src/main/resources/html/TZWebsiteApplicationBundle/TZ_ONLINE_PAGE_HTML.html
@@ -478,6 +478,21 @@
 												$("#mask").hide();
 												$("#inpwd").hide();
 												$("#MainDiv").show(); 
+												
+												/*$(".chosen-container").each(function(){
+													$(this).removeAttr("style")
+													$(this).attr("style","width: 100%");
+												});*/	
+												//console.dir($("select"));
+												$("select").each(function(){
+													//console.dir($(this));
+													//$(this).trigger("chosen:updated")
+													//$(this).chosen("width: 100%");
+													 //$(this).css('width','100%');
+													//$(this).chosen({width:"100%"});
+													$(this).chosen("destroy").chosen();
+													//$linkitems.trigger("blur");
+												});
 											}else{
 												alert(f.comContent.msg);
 											}
