--- a/src/main/resources/html/TZWebStationLetterMgBundle/TZ_WEB_ZNX_INFO_CONTENT.html
+++ b/src/main/resources/html/TZWebStationLetterMgBundle/TZ_WEB_ZNX_INFO_CONTENT.html
@@ -1,8 +1,8 @@
 <div class="main_tit">%bind(:2)</div>
 <div class="zxj_main_body">
 	<div class="table_top">
-		<a class="next_icon" mailid="%bind(:10)"> <img src="%bind(:1)/statics/images/website/skins/%bind(:11)/next.png"> <span>%bind(:3)</span>
-		</a> <a class="prev_icon" mailid="%bind(:10)"> <img src="%bind(:1)/statics/images/website/skins/%bind(:11)/prev.png"> <span>%bind(:4)</span>
+		<a class="next_icon" mailid="%bind(:10)" nextmailid="%bind(:12)"> <img src="%bind(:1)/statics/images/website/skins/%bind(:11)/next.png"> <span>%bind(:3)</span>
+		</a> <a class="prev_icon" mailid="%bind(:10)" prevmailid="%bind(:13)"> <img src="%bind(:1)/statics/images/website/skins/%bind(:11)/prev.png"> <span>%bind(:4)</span>
 		</a> <a class="return_icon"> <img src="%bind(:1)/statics/images/website/skins/%bind(:11)/return.png"> <span>%bind(:5)</span>
 		</a>
 	</div>
