报名表一些样式修改

--- a/src/main/resources/html/TZWebsiteApplicationBundle/TZ_ONLINE_PWD_HTML.html
+++ b/src/main/resources/html/TZWebsiteApplicationBundle/TZ_ONLINE_PWD_HTML.html
@@ -1,6 +1,6 @@
-<div id="mask" class="mask">
+<div id="mask" class="mask" style="display:none;">
 </div>
-	<div id="inpwd" class="regmain-con right" style="margin: 0 auto; float: none;z-index: 999999;position: absolute;top: 10%;left: 50%;margin-left:-464px;background-color:#fff">
+	<div id="inpwd" class="regmain-con right" style="display:none;margin: 0 auto; float: none;z-index: 999999;position: absolute;top: 10%;left: 50%;margin-left:-464px;background-color:#fff">
 		<div class="input-list" style="display: block">
 			<div class="input-list-info left">
 				<span class="red">*</span>%bind(:1)
