手机版登陆注册相关维护

--- a/src/main/resources/html/TZSitePageBundle/TzSemMLoginRelease.html
+++ b/src/main/resources/html/TZSitePageBundle/TzSemMLoginRelease.html
@@ -44,7 +44,7 @@
             		</a>
             		<a id="resetbnt" href="javascript:void(0)" class="login_help" onclick="reactivate()" style="display:none;">
             			<i></i>
-            			<span>帮助中心</span>
+            			<span>激活</span>
             		</a>
             	</div>
             </div>
