--- a/src/main/resources/html/TZWebSiteMRegisteBundle/TZ_GD_MREG_HTML.html
+++ b/src/main/resources/html/TZWebSiteMRegisteBundle/TZ_GD_MREG_HTML.html
@@ -11,6 +11,8 @@
 	src="%bind(:1)/statics/css/website/m/js/jquery-select2/3.4/select2.min.js"></script>
 <script type="text/javascript"
 	src="%bind(:1)/statics/css/website/m/js/jeesite.min.js"></script>
+<script type="text/javascript"
+	src="%bind(:1)/statics/js/lib/layer/mobile/layer.js"></script>		
 <script type="text/javascript" src="%bind(:1)/statics/js/tranzvision/func/mregister.js"></script>	
 <style>
 	.select_pros{
