--- a/src/main/resources/html/TZWebSiteMRegisteBundle/TZ_SETMREGISTEPAGE_HTML.html
+++ b/src/main/resources/html/TZWebSiteMRegisteBundle/TZ_SETMREGISTEPAGE_HTML.html
@@ -5,10 +5,7 @@
 <meta name="format-detection" content="telephone=no">
 <meta name="viewport"
 	content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0" />
-<title>清华MBA招生移动端-注册</title>
-<script type="text/javascript"
-	src="%bind(:2)/statics/js/tranzvision/extjs/app/view/website/set/js/pagefunc.js">
-	
+<title></title>	
 </script>
 <script type="text/javascript">
 	function getQueryString(name) {
