--- a/src/main/resources/html/TZWebSiteMRegisteBundle/TZ_MREALEAS_HEAD_HTML.html
+++ b/src/main/resources/html/TZWebSiteMRegisteBundle/TZ_MREALEAS_HEAD_HTML.html
@@ -3,14 +3,13 @@
 <meta charset="utf-8">
 <meta name="format-detection" content="telephone=no">
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0"/>
-<title>清华MBA招生移动端-注册</title>
+<title></title>
 <script type="text/javascript">
 	var TzUniversityContextPath = "%bind(:2)";
 	var strJgid = "%bind(:3)";
 	var strSiteId = "%bind(:4)";
 </script>
 <script type="text/javascript" src="%bind(:2)/statics/js/lib/jquery/jquery.min.js"></script>     
-<script type="text/javascript" src="%bind(:2)/statics/js/tranzvision/util/layer.js"></script>
 <script type="text/javascript" src="%bind(:2)/statics/js/tranzvision/extjs/app/view/website/set/js/pagefunc.js"></script>
 %bind(:1)
 </head>
