--- a/src/main/resources/html/TZApplicationCenterBundle/TZ_GD_CLASS2_HISTORY_HTML.html
+++ b/src/main/resources/html/TZApplicationCenterBundle/TZ_GD_CLASS2_HISTORY_HTML.html
@@ -7,8 +7,8 @@
 	TzUniversityContextPath = "%bind(:1)";
 </script>
 <script type="text/javascript" src="%bind(:1)/statics/js/lib/jquery/jquery.min.js"></script>
-<script type="text/javascript" src="%bind(:1)/statics/js/tranzvision/extjs/app/view/website/set/js/pagefunc.js"></script>
-
+<script type="text/javascript" src="%bind(:1)/statics/js/tranzvision/extjs/app/view/website/set/js/broad/pagefunc.js"></script>
+											 
 
 <script type="text/javascript">
 
@@ -157,8 +157,8 @@
         LoadHeader("%bind(:5)","%bind(:6)","");
 		LoadMenu("%bind(:5)","%bind(:6)","");
 		LoadFooter("%bind(:5)","%bind(:6)","");
-		LoadWelcome("%bind(:5)","%bind(:6)","");
-		
+		//LoadWelcome("%bind(:5)","%bind(:6)","");
+		LoadLeftArea("%bind(:5)","%bind(:6)","");
 	});
 </script>
 
