--- a/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_FIELD_HTML3.html
+++ b/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_FIELD_HTML3.html
@@ -5,7 +5,7 @@
 	</div>
 	<div class="main_full_line_right">
 		<input name="TZ_SCH_COUNTRY" type="hidden" id="TZ_SCH_COUNTRY" />
-		<input name="%bind(:8)" type="text" class="input_63px" id="%bind(:9)" value="%bind(:10)" />
+		<input name="%bind(:8)" type="text" class="input_63px" id="%bind(:9)" %bind(:4) value="%bind(:10)" />
       	<input name="%bind(:3)" type="text" class="input_275px" id="%bind(:3)" %bind(:4) value="%bind(:6)"/>
       	%bind(:5)
       	<span id="%bind(:3)Style" class="alert_display_none">
