手机登录页维护

--- a/src/main/resources/html/TZSitePageBundle/TzSemMLoginRelease.html
+++ b/src/main/resources/html/TZSitePageBundle/TzSemMLoginRelease.html
@@ -42,7 +42,7 @@
             			<i></i>
             			<span>忘记密码</span>
             		</a>
-            		<a id="resetbnt" href="javascript:void(0)" class="login_forget" onclick="reactivate()" style="display:none;">
+            		<a id="resetbnt" href="javascript:void(0)" class="account_active" onclick="reactivate()" style="display:none;">
             			<i></i>
             			<span>激活</span>
             		</a>
