报名中心修改 20170224 唐敏敏

--- a/src/main/resources/html/TZApplicationCenterBundle/TZ_GD_CLASS2_SELECT_HTML.html
+++ b/src/main/resources/html/TZApplicationCenterBundle/TZ_GD_CLASS2_SELECT_HTML.html
@@ -7,6 +7,7 @@
 	TzUniversityContextPath = "%bind(:1)";
 </script>
 <script type="text/javascript" src="%bind(:1)/statics/js/lib/jquery/jquery.min.js"></script>
+<script type="text/javascript" src="%bind(:1)/statics/js/lib/layer/layer.js"></script>
 <script type="text/javascript" src="%bind(:1)/statics/js/tranzvision/extjs/app/view/website/set/js/broad/pagefunc.js"></script>
 
 
@@ -88,7 +89,7 @@
        $content.eq(tab_index).show();
      }));
    }
-   
+ 
     $(document).ready(function(){	
     	 $(".sq_btn").click(function(){
 		       $(".Shade").show();
