报名表系统重构

--- a/src/main/resources/html/TZWebSelectorBundle/TZ_CLASS_SELECT_HTML.html
+++ b/src/main/resources/html/TZWebSelectorBundle/TZ_CLASS_SELECT_HTML.html
@@ -112,7 +112,7 @@ a{text-decoration: none;}
 				var linkId = "%bind(:9)";
 				$("#" + pageid, window.parent.document).val(classid);
 				$("#ClassId", window.parent.document).val(classid);
-				window.parent.SurveyBuild.classId=classid;
+				//window.parent.SurveyBuild.classId=classid;
 				
 				$("#"+pageid+"_SPAN", window.parent.document).html($("input[name='%bind(:7)']:checked").parent("label").text());
 				
